--- a/travel.html
+++ b/travel.html
@@ -172,6 +172,52 @@
 
         <h3>Tiying Li</h3>
 
+        <h2>Palo Alto</h2>
+    
+        <img src="images/paloalto_oval.JPG" width = "400" alt="Spikeball net in a grassy area at Stanford">
+
+        <h3>Geographical Location: North America</h3>
+        <p>Palo Alto is a city located in the San Francisco Bay Area in California. Palo Alto was established in 1894 when Leland Stanford founded Stanford University. It is named after a costal redwood tree called El Palo Alto. It is home to many tech companies and startups, as well as Stanford University. 
+        </p>
+        <p>
+            Palo Alto has two main commercial areas, University Ave and California Ave, both of which have delicious restaurants and stores. Many people come to Palo Alto to see Stanford, but there’s so much more to do. Palo Alto is home to many nature preserves such as Foothills Park and the Baylands, which are popular for hiking, walking, biking, and other outdoor activities.  
+        </p>
+
+        <h3>Photo Gallery</h3>
+        <figure>
+            <img src="images/paloalto_market.jpg" width = "200" alt="The Sunday farmers market on California Ave
+            ">
+            <figcaption>The farmers market is the place to buy fresh fruits and vegetables and people watch
+            </figcaption>
+        </figure>
+
+        <figure>
+            <img src="images/paloalto_pickleball.JPG" width = "200" alt="Pickleball courts at Mitchell Park">
+            <figcaption>Pickleball is a rapidly growing sport popular in Palo Alto</figcaption>
+        </figure>
+
+
+        <figure>
+            <img src="images/paloalto_bike.jpg" width = "200" alt="Girl biking on a street">
+            <figcaption>Biking is a great way to get around town</figcaption>
+        </figure>
+
+
+        <figure>
+            <img src="images/paloalto_baylands.jpg" width = "200" alt="Flowers at Baylands Nature Preserve">
+            <figcaption>Baylands is very pretty especially in the spring</figcaption>
+        </figure>
+
+        <figure>
+            <img src="images/paloalto_foothills.jpg" width = "200" alt="Lake at Foothills Park">
+            
+            <figcaption>The lake at Foothills is great for kayaking or canoeing </figcaption>
+        </figure>
+        <!-- Agnes Mar -->
+</div>
+<div>
+    <div>
+
     </div>
 </body>
 </html>
